<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tvCorreoElectronico"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="#aaaaaa"
            android:textColorLink="#000"
            android:paddingLeft="0dp" android:paddingRight="0dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintBottom_toTopOf="@+id/tvContrasena">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/etCorreoElectronico"
                android:hint="@string/nuevo_correo"
                android:textColor="#000"
                android:textSize="16sp"
                android:maxLength="25"
                android:paddingLeft="14dp"
                android:theme="@style/EditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:id="@+id/tvContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="#aaaaaa"
            android:textColorLink="#000"
            app:passwordToggleEnabled="true"
            android:paddingLeft="0dp" android:paddingRight="0dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvCorreoElectronico"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/etContrasena"
                android:hint="@string/contrasena"
                android:textColor="#000"
                android:textSize="16sp"
                android:maxLength="25"
                android:paddingLeft="14dp"
                android:theme="@style/EditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline3" app:layout_constraintGuide_begin="24dp"
                                          android:orientation="vertical"/>
    <TextView
            android:text="@string/info_cambiar_correo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tvCorreoElectronico"
            app:layout_constraintVertical_chainStyle="packed"/>
</android.support.constraint.ConstraintLayout>