<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Actividades.RegistroActivity"
        android:orientation="vertical"
        android:fillViewport="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar
                style="@android:style/Widget.Material.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
        />
        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                                      android:id="@+id/ivFotoCircular"
                                                      android:layout_width="0dp"
                                                      android:layout_height="128dp"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintStart_toStartOf="parent"
                                                      android:layout_marginTop="8dp"
                                                      app:layout_constraintTop_toTopOf="parent"
                                                      android:src="@mipmap/ic_launcher_round"
                                                      android:layout_centerInParent="true"
                                                      android:onClick="escogerFoto"
                                                      app:civ_border_width="2dp"
                                                      app:civ_border_color="#60000000"
                                                      android:elevation="4dp"

        />
        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvNombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_nombres"
                android:inputType="textPersonName"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                android:textColor="#000"
                android:textColorHint="#aaaaaa"
                android:textColorLink="@color/colorAccent"
                android:textStyle="bold"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/ivFotoCircular" android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
                android:paddingLeft="0dp" android:paddingRight="0dp">


            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLength="25"
                    android:paddingLeft="14dp"
                    android:inputType="textMultiLine|textPersonName"
                    android:textColor="#000"
                    android:theme="@style/EditText"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_apellidos"
                android:inputType="textPersonName"
                android:textColor="#000"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                android:textColorHint="#aaaaaa"
                android:textColorLink="@color/colorAccent"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvNombres">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/etApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textPersonName"
                    android:textSize="16sp"
                    android:maxLength="25"
                    android:paddingLeft="14dp"
                    android:textColor="#000"
                    android:theme="@style/EditText"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingrese_correo"
                android:inputType="textPersonName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="#000"
                android:textColorHint="#aaaaaa"
                android:textColorLink="@color/colorAccent"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                android:textStyle="bold"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvApellidos">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etCorreo"
                    android:textSize="16sp"
                    android:paddingLeft="14dp"
                    android:maxLength="30"
                    android:textColor="#000"
                    android:theme="@style/EditText"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                android:hint="@string/ingrese_celular"
                android:inputType="textPersonName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="#000"
                android:textColorHint="#aaaaaa"
                app:helperTextEnabled="true"
                app:helperText="@string/requerido"
                android:textColorLink="@color/colorAccent"
                android:textStyle="bold"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvCorreo">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/etCelular"
                    android:textSize="16sp"
                    android:paddingLeft="14dp"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="#000"
                    android:theme="@style/EditText" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="#000"
                android:textColorHint="#aaaaaa"
                android:textColorLink="@color/colorAccent"
                android:textStyle="bold"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvCelular">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etContrasena"
                    android:textSize="16sp"
                    android:maxLength="20"
                    android:paddingLeft="14dp"
                    android:layout_marginTop="56dp"
                    app:layout_constraintTop_toBottomOf="@+id/etCelular" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/tvRepetirContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repetir_contrasena"
                android:inputType="textPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColor="#000"
                android:textColorHint="#aaaaaa"
                android:textColorLink="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold"
                app:hintTextAppearance="@style/TextAppearance.AppCompat"
                app:passwordToggleEnabled="true"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvContrasena">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/etRepetirContrasena"
                    android:textSize="16sp"
                    android:paddingLeft="14dp"
                    android:maxLength="20"
                    android:layout_marginTop="56dp"
                    app:layout_constraintTop_toBottomOf="@+id/etCelular" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/crear_cuenta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button"
                android:textSize="14sp"

                android:onClick="registrar"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvRepetirContrasena" android:layout_marginStart="24dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>